# Codeforces

./: CMakeLists.txt  README.md  main.cpp
problems/: CMakeLists.txt  problem1.cpp  problem1.h
problems_tests/: CMakeLists.txt  test1.cpp
